[gd_scene load_steps=2 format=2]

[ext_resource path="res://Main.gd" type="Script" id=1]

[node name="Main" type="Node2D"]
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 1024.0
margin_bottom = 400.0
color = Color( 0, 0, 0, 1 )

[node name="TextBox" type="RichTextLabel" parent="."]
margin_right = 1024.0
margin_bottom = 300.0
scroll_following = true

[node name="TextEntry" type="LineEdit" parent="."]
margin_top = 300.0
margin_right = 1024.0
margin_bottom = 400.0
clear_button_enabled = true
caret_blink = true

[connection signal="text_entered" from="TextEntry" to="." method="_on_TextEntry_text_entered"]
